modified:   index.html 	deleted:    assets/images/arigatomeme.png

--- a/index.html
+++ b/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Repaso html y css</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dependencia Tecnológica</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Este es un gran encabezado.</h1>
-    <p>Esto es sólo un párrafo de texto</p>
-    <h2>Y ésta es una cabecera un poco más pequeña</h2>
-        <ul>
-            <li>Este es un elemento de una lista de viñetas (la primera)</li>
-            <li>Y este es el segundo elemento</li>
-        </ul>
-    <img src="C:\Users\HP\Documents\Kodland\html y css\assets\images\arigatomeme.png" alt="Image 1">
+    <h1>¿Estamos Demasiado Dependientes de la Tecnología?</h1>
+
+    <p>
+        La tecnología ha transformado todos los aspectos de nuestras vidas. Hoy en día, las tareas que antes se realizaban de forma manual, como pagar facturas o enviar una carta, se hacen en cuestión de segundos a través de dispositivos conectados a Internet.
+        Sin embargo, esta comodidad trae consigo una creciente dependencia. ¿Somos conscientes del nivel de control que la tecnología tiene sobre nuestras decisiones diarias?
+    </p>
+
+    <h2>Ámbitos Afectados por la Dependencia Tecnológica</h2>
+    <ul>
+        <li><strong>Comunicación:</strong> Las redes sociales y aplicaciones de mensajería han reemplazado las conversaciones cara a cara. 
+            Sin estas herramientas, muchas personas sienten desconexión social.</li>
+        <li><strong>Educación:</strong> Plataformas digitales y clases en línea facilitan el aprendizaje, pero también exigen una conexión constante 
+            que puede generar distracciones.</li>
+        <li><strong>Entretenimiento:</strong> Películas, series y juegos están disponibles a través de plataformas en streaming, lo que puede fomentar 
+            el sedentarismo y la procrastinación.</li>
+        <li><strong>Trabajo:</strong> El teletrabajo y las videollamadas permiten la flexibilidad laboral, aunque difuminan las fronteras entre la 
+            vida personal y profesional.</li>
+        <li><strong>Salud:</strong> Dependemos de aplicaciones y dispositivos para monitorear nuestra salud, pero el uso excesivo de pantallas puede 
+            afectar la vista y el sueño.</li>
+    </ul>
+
+    <h2>¿Qué Problemas Derivan de Esta Dependencia?</h2>
+    <p>
+        La dependencia tecnológica puede llevar a varios problemas. Por un lado, genera adicción digital: muchas personas no pueden pasar más de unas pocas horas 
+        sin revisar sus dispositivos. Por otro, existe un riesgo creciente de <em>infoxicación</em> —sobrecarga de información— que afecta nuestra capacidad de concentración.
+    </p>
+
+    <h2>El Papel de la Tecnología en la Salud Mental</h2>
+    <p>
+        El uso excesivo de redes sociales puede causar ansiedad, estrés y depresión, debido a la constante comparación con otros. Además, la falta de interacción 
+        física puede provocar soledad y aislamiento. Aunque la tecnología facilita la conexión global, también es necesario fomentar hábitos saludables para desconectar.
+    </p>
+
+    <h2>¿Cómo Lograr un Balance Saludable?</h2>
+    <p>
+        La clave para evitar la dependencia radica en usar la tecnología de manera consciente. Aquí hay algunos consejos para encontrar un equilibrio:
+    </p>
+    <ol>
+        <li>Establecer horarios para el uso de dispositivos y redes sociales.</li>
+        <li>Practicar la desconexión digital al menos una hora antes de dormir.</li>
+        <li>Fomentar actividades sin tecnología, como lectura o deportes.</li>
+        <li>Configurar notificaciones para evitar interrupciones constantes.</li>
+        <li>Utilizar aplicaciones que monitoreen y limiten el tiempo de uso en pantallas.</li>
+    </ol>
+
+    <h2>Conclusión</h2>
+    <p>
+        La tecnología es una herramienta poderosa que nos permite avanzar como sociedad, pero también es importante reconocer sus límites. 
+        Encontrar un balance entre la vida digital y el mundo real es fundamental para mantener el bienestar personal. 
+        La pregunta no es si debemos renunciar a la tecnología, sino cómo usarla sin perder nuestra autonomía.
+    </p>
 </body>
 </html>
